# FullStak

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  auth.py  defects.py  inspections.py  repair_requests.py  tasks.py  uploads.py
app/core/: config.py  db.py  deps.py  security.py
app/models/: __init__.py  repair_request.py  user.py
app/schemas/: auth.py  init.py  repair_request.py  user.py
app/services/: init.py  repair_request_service.py  user_service.py
road-markings-frontend/: Dockerfile  index.html  package-lock.json  package.json
road-markings-frontend/src/: App.tsx  index.css
road-markings-frontend/src/components/: Footer.tsx  TopBar.tsx
road-markings-frontend/src/layouts/: MainLayout.tsx
road-markings-frontend/src/pages/: AboutPage.tsx  DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  TasksPage.tsx
road-markings-frontend/src/shared/: api.ts  auth.ts  tasks.ts
