[project]
name = "road-marking-control"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0.45",
  "asyncpg>=0.28,<1.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "passlib[bcrypt]",
  "pydantic[email]",
  "python-multipart",
  "psycopg2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
