[project]
name = "road-marking-control"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<0.40",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0,<3.0",
  "asyncpg>=0.28,<1.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "passlib[bcrypt]>=1.7,<2.0",
  "pydantic[email]>=2.8,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "psycopg2>=2.9,<3.0",
  "email-validator>=2.0,<3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
